GNOME Bugzilla – Bug 755618
gstglfilter: fix error GL_INVALID_OPERATION "glBindBuffer: buffer bound to more than 1"
Last modified: 2015-09-25 10:44:59 UTC
When using gstglfilter (for fun) with chromium gpu process it fails: GL ERROR :GL_INVALID_OPERATION : glBindBuffer: buffer bound to more than 1 target And obviously then GL ERROR :GL_INVALID_OPERATION : glDrawElements: No element array buffer bound And then black frame. It was for fun but it is a real bug. Patch follows.
Created attachment 312123 [details] [review] glfilter: use GL_ELEMENT_ARRAY_BUFFER for vbo indices
Review of attachment 312123 [details] [review]: LGTM
commit b10fe76cbfe15d8e40e4e64e1ae12524d64a0298 Author: Julien Isorce <j.isorce@samsung.com> Date: Fri Sep 25 10:32:00 2015 +0100 glfilter: use GL_ELEMENT_ARRAY_BUFFER for vbo indices Fixes this error with chromium gpu process: GL_INVALID_OPERATION, glBindBuffer: buffer bound to more than 1 target https://bugzilla.gnome.org/show_bug.cgi?id=755618