glfilter: use GL_ELEMENT_ARRAY_BUFFER for vbo indices

Fixes this error with chromium gpu process:
GL_INVALID_OPERATION, glBindBuffer: buffer bound to more than 1 target

https://bugzilla.gnome.org/show_bug.cgi?id=755618